# Buddy_Heap_FreeRTOS_rp2040

./: README.md  heap_stats_visualization.py
heap/: heap_6_Knuth_Buddy.c  heap_7_Friendly_Buddy.c  portable.h
src_main_FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h  main.c
